--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:aayushagrawal25@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/aayushagarwal25">github.com/aayushagarwal</a></li>
+	        		<li><a href="https://github.com/aayushagarwal25">GitHub</a></li>
 				</ul>
 			</footer>
 		</body>
